@@ -1,3 +1,11 @@
+2009-03-04  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #567852
+
+	* calendar/e-cal-backend-exchange-tasks.c: (create_task_object):
+	* calendar/e-cal-backend-exchange-calendar.c: (create_object): Don't
+	add new CREATED, LAST-MODIFIED properties when event has one already.
+
 2009-03-02  Matthew Barnes  <mbarnes@redhat.com>
 
 	* configure.in: Post-release version bump.
